# Datamancy

./: .dockerignore  .env  .env.bootstrap  .env.enc  .env.example  .env.server  .env.template  .env.working  .gitignore  .sops.yaml  .tmp-docker-compose.yml  AGENT_BOOTSTRAP.md  AGENT_GUIDE.md  AGENT_PROMPT.md  ALPHA_INTERDAY_ENGINE_REPORT.md  API.md  ARCHITECTURE.md  ARCHITECTURE_PROMPT_V2.md  AUTHELIA_SELECTORS.md  AUTOMATED-HASHING-GUIDE.md  BACKUP_IMPLEMENTATION_COMPLETE.md  CADDY_SECURITY_MIGRATION.md  CHANGES-PERSISTED.md  CLICKHOUSE_MIGRATION_TODO.md  COMPOSE-CODEGEN.md  CONTINUE_STACK_TESTS.md  CREDENTIALS.md  CURRENT_STATUS.md  DATASOURCE_OBSERVER_SECURITY.md  DEPLOYMENT-NOTES.md  DEPLOYMENT-SUCCESS.md  DEPLOYMENT.md  DEPLOYMENT_FIXES_APPLIED.md  DEPLOYMENT_FIXES_SUMMARY.md  DEPLOYMENT_STATUS_20260217.md  DEPLOYMENT_SUCCESS.md  DETAILED_FAILURE_DIAGNOSIS.md  DEVELOPMENT.md  DIAGNOSIS_AND_ACTION_PLAN_2026-02-12.md  DIAGNOSTIC_AGENT_EVALUATION.md  (+202 more)
.deprecated/: README.md  process-config-templates.main.kts
.forgejo/: README.md
.old/: .gitignore
.secrets/: oidc-private.pem  oidc-public.pem
Applications/: .env  (+1 more)
containers.src/jupyterlab-web3-wallet/: .gitignore  README.md  TESTING.md  pyproject.toml
containers.src/jupyterlab-web3-wallet/.github/workflows/: test.yml
containers.src/jupyterlab-web3-wallet/datamancy_jupyterlab_web3_wallet/: __init__.py  handlers.py
containers.src/jupyterlab-web3-wallet/src/: manager.ts
containers.src/jupyterlab-web3-wallet/style/: index.css
containers.src/jupyterlab-web3-wallet/tests/: test_wallet_provider.py
src/: .env  (+17 more)
(+2420 files in other folders)
