[build-system]
requires = ["jupyter_packaging~=0.12.0", "setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datamancy-jupyterlab-web3-wallet"
version = "1.0.0"
description = "JupyterLab extension for Web3 wallet integration"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Datamancy", email = "dev@datamancy.org"}]
keywords = ["Jupyter", "JupyterLab", "Web3", "Ethereum"]
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
dependencies = [
    "jupyter_server>=2.0.0,<3"
]

[project.urls]
Homepage = "https://github.com/datamancy/jupyterlab-web3-wallet"
